[FIX] = Ajuste no codigo
Ajuste no codigo

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,8 @@
     {% block head%} {% endblock%}
   </head>
   <body class="bg-black text-gray-100 font-primary">
-    {% include "navbar.html" %} {% block content %}{% endblock %}
+    {% include "navbar.html" %} 
+    {% block content %}{% endblock %}
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
