--- a/filme/templates/homefilmes.html
+++ b/filme/templates/homefilmes.html
@@ -2,8 +2,7 @@
 {% block content %}
 
 <div class="py-10">
-  <h1>Essa e uma home filmes</h1>
-  {% for filme in lista_filmes%}
+  {% for filme in object_list%}
   <hr />
   <p>{{filme.titulo}}</p>
   <p>{{filme.descricao}}</p>
