--- a/filme/templates/homefilmes.html
+++ b/filme/templates/homefilmes.html
@@ -4,7 +4,7 @@
 <div class="py-10">
   {% for filme in object_list%}
   <hr />
-  <p>{{filme.titulo}}</p>
+  <a href={% url 'filme:detalhesfilme' filme.pk%}><p>{{filme.titulo}}</p></a>
   <p>{{filme.descricao}}</p>
   <img src="{{filme.thumb.url}}" />
   {%endfor%}
