--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="w-full flex justify-between items-center py-3 px-4 fixed z-50">
   <div class="w-6/12">
-    <a href="#">
+    <a href={% url 'filme:homepage'%}>
       <img class="w-2/12" src="{% static 'images/hashflix.png' %}" alt="My image" />
     </a>
   </div>
